// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression - Payroll Status Badges > Colour family > renders every status side by side so colour drift is visible at a glance 1`] = `
<div>
  <div>
    <div>
      <div
        aria-label="Status: Verified"
        class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-green-100 text-green-800 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check-circle2 w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        <span>
          Verified
        </span>
      </div>
      <div
        aria-label="Status: Pending"
        class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-yellow-100 text-yellow-800 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <span>
          Pending
        </span>
      </div>
      <div
        aria-label="Status: Failed"
        class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-red-100 text-red-800 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-xcircle w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <span>
          Failed
        </span>
      </div>
      <div
        aria-label="Status: Cancelled"
        class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-gray-100 text-gray-900 hover:bg-gray-100/80 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-xcircle w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <span>
          Cancelled
        </span>
      </div>
    </div>
    <div>
      <div
        aria-label="Reconciliation: Matched"
        class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-green-100 text-green-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
        data-testid="reconciliation-status-badge"
        role="status"
        title="All expected payments were reconciled."
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check-circle2 w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        <span>
          Matched
        </span>
      </div>
      <div
        aria-label="Reconciliation: Pending"
        class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-blue-100 text-blue-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
        data-testid="reconciliation-status-badge"
        role="status"
        title="Reconciliation is still in progress. Check again after settlement."
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <span>
          Pending
        </span>
      </div>
      <div
        aria-label="Reconciliation: Mismatched"
        class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-yellow-100 text-yellow-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
        data-testid="reconciliation-status-badge"
        role="status"
        title="Reconciliation found a mismatch. Open the payroll run for details."
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-alert-triangle w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span>
          Mismatched
        </span>
      </div>
      <div
        aria-label="Reconciliation: Failed"
        class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-red-100 text-red-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
        data-testid="reconciliation-status-badge"
        role="status"
        title="Reconciliation could not complete. Open the payroll run to review and retry."
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-xcircle w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
        <span>
          Failed
        </span>
      </div>
      <div
        aria-label="Reconciliation: Manually reviewed"
        class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-gray-100 text-gray-900 hover:bg-gray-100/80 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
        data-testid="reconciliation-status-badge"
        role="status"
        title="A reviewer acknowledged this reconciliation outcome."
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-3.5 h-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span>
          Manually reviewed
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Edge cases > renders an unrecognised status on the neutral, accessible unknown badge 1`] = `
<div>
  <div
    aria-label="Status: Awaiting Review"
    class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-gray-100 text-gray-900 hover:bg-gray-100/80 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
    role="status"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-help-circle w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      Awaiting Review
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Reconciliation outcome badges > renders 'failed' as "'Failed'" with its approved colours and guidance 1`] = `
<div>
  <div
    aria-label="Reconciliation: Failed"
    class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-red-100 text-red-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
    data-testid="reconciliation-status-badge"
    role="status"
    title="Reconciliation could not complete. Open the payroll run to review and retry."
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-xcircle w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
    <span>
      Failed
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Reconciliation outcome badges > renders 'manually_reviewed' as "'Manually reviewed'" with its approved colours and guidance 1`] = `
<div>
  <div
    aria-label="Reconciliation: Manually reviewed"
    class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-gray-100 text-gray-900 hover:bg-gray-100/80 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
    data-testid="reconciliation-status-badge"
    role="status"
    title="A reviewer acknowledged this reconciliation outcome."
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-eye w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
      />
      <circle
        cx="12"
        cy="12"
        r="3"
      />
    </svg>
    <span>
      Manually reviewed
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Reconciliation outcome badges > renders 'matched' as "'Matched'" with its approved colours and guidance 1`] = `
<div>
  <div
    aria-label="Reconciliation: Matched"
    class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-green-100 text-green-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
    data-testid="reconciliation-status-badge"
    role="status"
    title="All expected payments were reconciled."
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check-circle2 w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m9 12 2 2 4-4"
      />
    </svg>
    <span>
      Matched
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Reconciliation outcome badges > renders 'mismatched' as "'Mismatched'" with its approved colours and guidance 1`] = `
<div>
  <div
    aria-label="Reconciliation: Mismatched"
    class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-yellow-100 text-yellow-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
    data-testid="reconciliation-status-badge"
    role="status"
    title="Reconciliation found a mismatch. Open the payroll run for details."
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-alert-triangle w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <span>
      Mismatched
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Reconciliation outcome badges > renders 'pending' as "'Pending'" with its approved colours and guidance 1`] = `
<div>
  <div
    aria-label="Reconciliation: Pending"
    class="border transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-blue-100 text-blue-800 inline-flex items-center gap-1 font-medium rounded-full px-2.5 py-0.5 text-xs"
    data-testid="reconciliation-status-badge"
    role="status"
    title="Reconciliation is still in progress. Check again after settlement."
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-clock w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <polyline
        points="12 6 12 12 16 14"
      />
    </svg>
    <span>
      Pending
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Run lifecycle badges > renders 'cancelled' as "'Cancelled'" with its approved colours 1`] = `
<div>
  <div
    aria-label="Status: Cancelled"
    class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-gray-100 text-gray-900 hover:bg-gray-100/80 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
    role="status"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-xcircle w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
    <span>
      Cancelled
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Run lifecycle badges > renders 'failed' as "'Failed'" with its approved colours 1`] = `
<div>
  <div
    aria-label="Status: Failed"
    class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-red-100 text-red-800 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
    role="status"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-xcircle w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
    <span>
      Failed
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Run lifecycle badges > renders 'pending' as "'Pending'" with its approved colours 1`] = `
<div>
  <div
    aria-label="Status: Pending"
    class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-yellow-100 text-yellow-800 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
    role="status"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-clock w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <polyline
        points="12 6 12 12 16 14"
      />
    </svg>
    <span>
      Pending
    </span>
  </div>
</div>
`;

exports[`Visual Regression - Payroll Status Badges > Run lifecycle badges > renders 'verified' as "'Verified'" with its approved colours 1`] = `
<div>
  <div
    aria-label="Status: Verified"
    class="focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-green-100 text-green-800 inline-flex items-center gap-1 px-2.5 py-0.5 text-xs font-medium rounded-full border transition-colors"
    role="status"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check-circle2 w-3.5 h-3.5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m9 12 2 2 4-4"
      />
    </svg>
    <span>
      Verified
    </span>
  </div>
</div>
`;
